[package]
name = "jit_rs-sys"
version = "0.1.1"
authors = ["serid"]
edition = "2018"

license = "MIT"
description = "Bindings for crate jit_rs"
homepage = "https://crates.io/crates/jit_rs/"
documentation = "https://docs.rs/jit_rs/"
repository = "https://github.com/serid/jit.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.13.0"

[build-dependencies]
windows = "0.13.0"